// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <Documents /> should renders correctly and testing another methods 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="documentsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="documentsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Documents"
          />
          <PluginMainPanel
            columnNameSortBy="documentType"
            emptyDataMessage="No documents"
            headers={
              Array [
                Object {
                  "key": "documentType",
                  "title": "Name",
                  "width": "56%",
                },
                Object {
                  "key": "dateCreated",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="documents"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Documents /> should renders correctly and testing context and lifecycle componentWillReceiveProps 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="documentsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="documentsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Documents"
          />
          <PluginMainPanel
            columnNameSortBy="documentType"
            emptyDataMessage="No documents"
            headers={
              Array [
                Object {
                  "key": "documentType",
                  "title": "Name",
                  "width": "56%",
                },
                Object {
                  "key": "dateCreated",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="documents"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <DocumentsDetail
          currentPanel="documentsDetail"
          detail={
            Object {
              "documentType": "Discharge Summary",
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="documentsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="documentPanel"
          userId="9999999000"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Documents /> should renders correctly with documentPanel and testing Detail Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="documentsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={false}
            name="documentsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Documents"
          />
          <PluginMainPanel
            columnNameSortBy="documentType"
            emptyDataMessage="No documents"
            headers={
              Array [
                Object {
                  "key": "documentType",
                  "title": "Name",
                  "width": "56%",
                },
                Object {
                  "key": "dateCreated",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="documents"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <DocumentsDetail
          currentPanel="documentsDetail"
          detail={
            Object {
              "documentType": "Discharge Summary",
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="documentsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="documentPanel"
          userId="9999999000"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Documents /> should renders correctly with documentPanel and testing Detail Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section full-panel full-panel-details"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <DocumentsDetail
          currentPanel="documentsDetail"
          detail={
            Object {
              "documentType": "Discharge Summary",
            }
          }
          editedPanel={Object {}}
          expandedPanel="documentPanel"
          isSubmit={false}
          name="documentsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="documentPanel"
          userId="9999999000"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Documents /> should renders correctly with documentPanel and testing Detail Panel 3`] = `
<section
  className="page-wrapper"
>
  <div
    className="section full-panel full-panel-details"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <DocumentsDetail
          currentPanel="documentsDetail"
          detail={
            Object {
              "documentType": "Discharge Summary",
            }
          }
          editedPanel={Object {}}
          expandedPanel="documentPanel"
          isSubmit={false}
          name="documentsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          onShow={[Function]}
          openedPanel="documentPanel"
          userId="9999999000"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <Documents /> should renders correctly with empty store 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="documentsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={false}
            name="documentsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Documents"
          />
          <PluginMainPanel
            columnNameSortBy="documentType"
            emptyDataMessage="No documents"
            headers={
              Array [
                Object {
                  "key": "documentType",
                  "title": "Name",
                  "width": "56%",
                },
                Object {
                  "key": "dateCreated",
                  "title": "Date",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "SourceID",
                },
              ]
            }
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="documents"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;
